[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icedrive-directory"
version = "0.2.0"
authors = [
  { name="Sergio Pozuelo Martín-Consuegra", email="sergio.pozuelo4@alu.uclm.es" },
]
description = "Implementation of IceDrive Directory service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
dependencies = [
    "zeroc-ice>=3.7",
    "Ice>=0.0.2",
    "IcePy>=0.0.7",
]

[project.optional-dependencies]
tests = ["pytest"]
linters = ["black", "ruff", "pydocstyle"]

[project.urls]
"Homepage" = "https://github.com/SergioPUCLM/DistSysLab"

[project.scripts]
icedrive-directory = "icedrive_directory.command_line_handlers:server"
